{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 180,
  "lineage": "f0872fe5-7723-85b0-c09b-bf17f583903f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021eb229e3c1cf692",
            "arn": "arn:aws:ec2:us-east-1:541495491866:elastic-ip/eipalloc-021eb229e3c1cf692",
            "association_id": "eipassoc-0aa1a517b86c280e8",
            "domain": "vpc",
            "id": "eipalloc-021eb229e3c1cf692",
            "network_border_group": "us-east-1",
            "network_interface": "eni-009a49f8111244ea8",
            "private_dns": "ip-10-0-1-187.ec2.internal",
            "private_ip": "10.0.1.187",
            "public_dns": "ec2-34-194-62-65.compute-1.amazonaws.com",
            "public_ip": "34.194.62.65",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Project": "ClinicFlow"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:internet-gateway/igw-01b764495e135ffc4",
            "id": "igw-01b764495e135ffc4",
            "owner_id": "541495491866",
            "tags": {
              "Name": "ClinicFlow-IGW"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-IGW",
              "Project": "ClinicFlow"
            },
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "dependencies": [
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "clinicflow_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "clinicflow-logs-clinicflow-core-541495491866",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541495491866:loadbalancer/app/ClinicFlow-ALB/49119a1196dae611",
            "arn_suffix": "app/ClinicFlow-ALB/49119a1196dae611",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ClinicFlow-ALB-1571274921.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:541495491866:loadbalancer/app/ClinicFlow-ALB/49119a1196dae611",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ClinicFlow-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d37c3b177f7aa152"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0969c76ea747821af"
              },
              {
                "subnet_id": "subnet-0c60f20484823681a"
              }
            ],
            "subnets": [
              "subnet-0969c76ea747821af",
              "subnet-0c60f20484823681a"
            ],
            "tags": {
              "Name": "ClinicFlow-ALB"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-ALB",
              "Project": "ClinicFlow"
            },
            "vpc_id": "vpc-0c2ac79e0da799dbc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.clinicflow_logs",
            "aws_security_group.web_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.clinicflow_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541495491866:listener/app/ClinicFlow-ALB/49119a1196dae611/51c02418bc61f078",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:541495491866:listener/app/ClinicFlow-ALB/49119a1196dae611/51c02418bc61f078",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:541495491866:loadbalancer/app/ClinicFlow-ALB/49119a1196dae611",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Project": "ClinicFlow"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.clinicflow_alb",
            "aws_s3_bucket.clinicflow_logs",
            "aws_security_group.web_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.clinicflow_vpc",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "clinicflow_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541495491866:targetgroup/ClinicFlow-TargetGroup/9e9d751920b4c736",
            "arn_suffix": "targetgroup/ClinicFlow-TargetGroup/9e9d751920b4c736",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:541495491866:targetgroup/ClinicFlow-TargetGroup/9e9d751920b4c736",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ClinicFlow-TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Project": "ClinicFlow"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "dependencies": [
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021eb229e3c1cf692",
            "association_id": "eipassoc-0aa1a517b86c280e8",
            "connectivity_type": "public",
            "id": "nat-0aa1d818be619c1f3",
            "network_interface_id": "eni-009a49f8111244ea8",
            "private_ip": "10.0.1.187",
            "public_ip": "34.194.62.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c60f20484823681a",
            "tags": {
              "Name": "ClinicFlow-NAT"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-NAT",
              "Project": "ClinicFlow"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:route-table/rtb-0870317ba8de3074e",
            "id": "rtb-0870317ba8de3074e",
            "owner_id": "541495491866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aa1d818be619c1f3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ClinicFlow-Private-RT"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-Private-RT",
              "Project": "ClinicFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:route-table/rtb-0999d25e8d64d78aa",
            "id": "rtb-0999d25e8d64d78aa",
            "owner_id": "541495491866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b764495e135ffc4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ClinicFlow-Public-RT"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-Public-RT",
              "Project": "ClinicFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be02dd83a74d73d8",
            "route_table_id": "rtb-0870317ba8de3074e",
            "subnet_id": "subnet-04cb984ada50a42f5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027585db9118f81a2",
            "route_table_id": "rtb-0870317ba8de3074e",
            "subnet_id": "subnet-0c9dab16d9dcb1302"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88929111c9a7bb5",
            "route_table_id": "rtb-0999d25e8d64d78aa",
            "subnet_id": "subnet-0c60f20484823681a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726344c7d92f46c1",
            "route_table_id": "rtb-0999d25e8d64d78aa",
            "subnet_id": "subnet-0969c76ea747821af"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:security-group/sg-0e2cabf63e025a2fc",
            "description": "Allow traffic only from Web Tier",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow database to communicate ONLY within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2cabf63e025a2fc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from Web SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d37c3b177f7aa152"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ClinicFlow-DB-SG",
            "name_prefix": "",
            "owner_id": "541495491866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ClinicFlow-DB-SG"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-DB-SG",
              "Project": "ClinicFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:security-group/sg-0d37c3b177f7aa152",
            "description": "Allow inbound HTTP/HTTPS traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d37c3b177f7aa152",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ClinicFlow-Web-SG",
            "name_prefix": "",
            "owner_id": "541495491866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ClinicFlow-Web-SG"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-Web-SG",
              "Project": "ClinicFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:subnet/subnet-04cb984ada50a42f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cb984ada50a42f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541495491866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-A"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "Private-Subnet-A",
              "Project": "ClinicFlow"
            },
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "dependencies": [
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:subnet/subnet-0c9dab16d9dcb1302",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9dab16d9dcb1302",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541495491866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-B"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "Private-Subnet-B",
              "Project": "ClinicFlow"
            },
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "dependencies": [
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:subnet/subnet-0c60f20484823681a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c60f20484823681a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541495491866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-A"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "Public-Subnet-A",
              "Project": "ClinicFlow"
            },
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "dependencies": [
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:subnet/subnet-0969c76ea747821af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0969c76ea747821af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541495491866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-B"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "Public-Subnet-B",
              "Project": "ClinicFlow"
            },
            "vpc_id": "vpc-0c2ac79e0da799dbc"
          },
          "dependencies": [
            "aws_vpc.clinicflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "clinicflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541495491866:vpc/vpc-0c2ac79e0da799dbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0697ddb5947719a59",
            "default_route_table_id": "rtb-0b728e0bc4e8bfa68",
            "default_security_group_id": "sg-0d9b8b4d535d74395",
            "dhcp_options_id": "dopt-0523ff1fb61fec2d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2ac79e0da799dbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b728e0bc4e8bfa68",
            "owner_id": "541495491866",
            "tags": {
              "Name": "ClinicFlow-VPC"
            },
            "tags_all": {
              "Environment": "Production",
              "HIPAA_Tier": "High_Security",
              "ManagedBy": "Terraform",
              "Name": "ClinicFlow-VPC",
              "Project": "ClinicFlow"
            }
          }
        }
      ]
    }
  ]
}